Change display name to "corporate"

--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "extName": {
-    "message": "ScTranslator"
+    "message": "ScTranslator - corporate"
   },
   "extDescription": {
     "message": "Übersetze ausgewählten Text mit mehreren Quellen, übersetze Webseiten mit 3 Anzeigemodi... Eine All-in-One-Übersetzungserweiterung."
